--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 
 
-                src="https://drive.google.com/file/d/1_aptauCEXPIQUXkmzqReRUV8bq46QIRc/view?usp=sharing"
+                src="https://pbs.twimg.com/media/Eczo7sIVcAEuKSk?format=jpg&name=4096x4096"
                 alt="Profile Image"
               />
             </div>
